--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             </nav>
         </header>
         <main></main>
-        <footer></footer>
+        <footer class="footer">
+            <span class="foot_cont">
+                <span>About</span>
+                <span>Privacy</span>
+                <span>Contact Us</span>
+            </div>
+        </footer>
     </body>
 </html>
