--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Cyclone Wiki</title>
         <link type="text/css" rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -15,7 +16,16 @@
                 </div>
             </nav>
         </header>
-        <main></main>
+        <main>
+            <section class="one">
+                <h1 class="cyclone_wiki">Cyclone Wiki</h1>
+                <figure class="main_img">
+                    <img src="resources/cyclone_1.jpg" alt="Cyclone picture from NASA Satellite"/>
+                    <figcaption>ISS view of Tropical Cyclone Amara on December 20.</figcaption>
+                </figure>
+                
+            </section>
+        </main>
         <footer class="footer">
             <span class="foot_cont">
                 <span>About</span>
