--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <title>Cyclone Wiki</title>
         <link type="text/css" rel="stylesheet" href="css/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    </head>
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Sriracha&display=swap" rel="stylesheet">    </head>
     <body>
         <header>
             <nav class="nav_bar">
@@ -22,8 +21,15 @@
                 <figure class="main_img">
                     <img src="resources/cyclone_1.jpg" alt="Cyclone picture from NASA Satellite"/>
                     <figcaption>ISS view of Tropical Cyclone Amara on December 20.</figcaption>
-                </figure>
-                
+                </figure>                
+            </section>
+            <section class="cyclone1">
+                    <h1>What is Cyclone ?</h1>
+                    <div>
+                        <p>In meteorology, a cyclone refers to any low pressure area with winds spiralling inwards. Cyclones rotate clockwise in the Southern Hemisphere and anti-clockwise in the Northern Hemisphere. Cyclone is the general term for a variety of low pressure system types, such as tropical cyclones, extra tropical cyclones and tornadoes.</p>
+                        <p>The largest of the low-pressure systems are the extratropical cyclones and the cold-core polar cyclones which lie on the synoptic scale which in meteorology is a horizontal length of 1000 km or more. The Warm-core cyclones are the tropical cyclones, mesocyclones, and the polar lows that lie within the smaller mesoscale. The Subtropical cyclones are intermediate in size. Cyclones have also been on other planets outside of the Earth, such as Mars and Neptune. For example the Great Red Spot of Jupiter and the Great Black Spot of Neptune.</p>
+                        <p>Cyclones are also referred to as hurricanes and typhoons. They consist of the eye, eyewall and rainbands.</p>
+                    </div>
             </section>
         </main>
         <footer class="footer">
