--- a/index.html
+++ b/index.html
@@ -31,6 +31,37 @@
                         <p>Cyclones are also referred to as hurricanes and typhoons. They consist of the eye, eyewall and rainbands.</p>
                     </div>
             </section>
+            <section class="facts">
+                <div class="facts_1">
+                    <h1>Types Of Cyclones</h1>
+                </div>
+                <div class="facts_2">
+                    <div class="facts_3">
+                        <figure>
+                            <img src="resources/tropical.jpg" alt="Tropical Cyclone">
+                            <figcaption>Tropical cyclone</figcaption>
+                        </figure>
+                    </div>
+                    <div class="facts_4">
+                        <figure>
+                            <img src="resources/mesocyclone.jpg" alt="Tropical Cyclone">
+                            <figcaption>Mesocyclones</figcaption>
+                        </figure>
+                    </div>
+                    <div class="facts_5">
+                        <figure>
+                            <img src="resources/extratropical.jpg" alt="Tropical Cyclone">
+                            <figcaption>Extratropical Cyclones</figcaption>
+                        </figure>
+                    </div>
+                    <div class="facts_6">
+                        <figure>
+                            <img src="resources/tornado.jpg" alt="Tropical Cyclone">
+                            <figcaption>Hurricanes, typhoons and tornadoes</figcaption>
+                        </figure>
+                    </div>
+                </div>                
+            </section>
         </main>
         <footer class="footer">
             <span class="foot_cont">
