--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
             <nav class="nav_bar">
                 <div id="logo"><img src="resources/logo.png" alt="Logo"/></div>
                 <div class="nav_content">
-                    <span class="nav_1">Wiki</span>
-                    <span class="nav_2">News</span>
-                    <span class="nav_2">Contact Us</span>
+                    <span class="nav_1"><a href="index.html">Wiki</a></span>
+                    <span class="nav_2"><a href="news.html">News</a></span>
+                    <span class="nav_3"><a href="#">Facts</a></span>
+                    <span class="nav_4"><a href="#">Gallery</a></span>
                 </div>
             </nav>
         </header>
