--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
                     <span class="nav_1"><a href="index.html">Wiki</a></span>
                     <span class="nav_2"><a href="news.html">News</a></span>
                     <span class="nav_3"><a href="#">Facts</a></span>
-                    <span class="nav_4"><a href="#">Gallery</a></span>
+                    <span class="nav_4"><a href="gallery.html">Gallery</a></span>
                 </div>
             </nav>
         </header>
