--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <div class="nav_content">
                     <span class="nav_1"><a href="index.html">Wiki</a></span>
                     <span class="nav_2"><a href="news.html">News</a></span>
-                    <span class="nav_3"><a href="#">Facts</a></span>
+                    <span class="nav_3"><a href="facts.html">Facts</a></span>
                     <span class="nav_4"><a href="gallery.html">Gallery</a></span>
                 </div>
             </nav>
