Add responsive index

--- a/facts.html
+++ b/facts.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <nav class="nav_bar">
-                <div id="logo"><img src="resources/logo.png" alt="Logo"/></div>
+                <div id="logo"><a href="index.html"><img src="resources/logo.png" alt="Logo"/></a></div>
                 <div class="nav_content">
                     <span class="nav_1"><a href="index.html">Wiki</a></span>
                     <span class="nav_2"><a href="news.html">News</a></span>
